fix alignment of gender and race/ethnicity columns with methodology type seleciton, since they are related. And add width to race/ethnicity selection. Also, add left-hand border to both so that the grouping of those 3 elements is more clear

--- a/www/custom.css
+++ b/www/custom.css
@@ -405,6 +405,13 @@ a:hover {
 }
 
 /* || SYSTEM OVERVIEW FILTERS */
+.light-left-border {
+  border-left: 1px solid lightgray;
+}
+.light-right-border {
+  border-right: 1px solid lightgray;
+}
+
 #syso_date_range {
   display: inline-block;
 }
